// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format unresolved item formats ok when missing targetFile 1`] = `
"  npm project
  ✖ Failed to process item"
`;

exports[`format unresolved item formats unresolved as expected by default 1`] = `
"  requirements.txt
  ✖ Failed to process item"
`;
